<resources>
    <string name="app_name">Mr. Potato Head - Jeroen Terstall 10766030</string>
    <string name="instructions">Select which part you want to put on Mr. Potato Head</string>
    <string name="mouth">Mouth</string>
    <string name="nose">Nose</string>
    <string name="hat">Hat</string>
    <string name="ears">Ears</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="mustache">Mustache</string>
    <string name="eyes">Eyes</string>
    <string name="glasses">Glasses</string>
    <string name="arms">Arms</string>
    <string name="shoes">Shoes</string>
</resources>
