<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_gravity="center|bottom"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/body_image"
            android:src="@drawable/body"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mouth"
            android:id="@+id/mouth_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mustache"
            android:id="@+id/mustache_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/shoes"
            android:id="@+id/shoes_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ears"
            android:id="@+id/ears_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/eyebrows"
            android:id="@+id/eyebrows_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/eyes"
            android:id="@+id/eyes_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/glasses"
            android:id="@+id/glasses_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hat"
            android:id="@+id/hat_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/arms"
            android:id="@+id/arms_image"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/nose"
            android:id="@+id/nose_image"
            android:visibility="invisible"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/arms"
                android:onClick="changeVisibility"
                android:id="@+id/arms_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mouth"
                android:onClick="changeVisibility"
                android:id="@+id/mouth_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eyes"
                android:onClick="changeVisibility"
                android:id="@+id/eyes_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/shoes"
                android:onClick="changeVisibility"
                android:id="@+id/shoes_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/glasses"
                android:onClick="changeVisibility"
                android:id="@+id/glasses_check"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eyebrows"
                android:layout_weight="1"
                android:onClick="changeVisibility"
                android:id="@+id/eyebrows_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ears"
                android:onClick="changeVisibility"
                android:id="@+id/ears_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nose"
                android:onClick="changeVisibility"
                android:id="@+id/nose_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hat"
                android:onClick="changeVisibility"
                android:id="@+id/hat_check"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mustache"
                android:onClick="changeVisibility"
                android:id="@+id/mustache_check"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>